user編集画面を実装

--- a/app/views/users/_main-left.html.haml
+++ b/app/views/users/_main-left.html.haml
@@ -12,7 +12,8 @@
       %span
         2
   %p#profile_comment
-    %a#sidebar_write_profile_button
+  =link_to edit_user_registration_path do
+    #sidebar_write_profile_button
   %ul#user_data
     %li
       %a
