--- a/app/assets/stylesheets/modules/_restaurant-page.scss
+++ b/app/assets/stylesheets/modules/_restaurant-page.scss
@@ -114,7 +114,7 @@ font-size: 16px;
 
 .frame{
 background-color: #fff;
-border: 1px solid rgba(0,0,0,.1);
+margin-bottom: 15px;
 }
 
 .color-orange {
