ログイン画面の修正

--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -17,5 +17,5 @@
       = f.radio_button :rate, 3, {id: "bt_score_3"}
     #submit_area
       = f.label :commit do
-        = f.submit "Send" , style: "display:none;"
+        = f.submit "Send"
         %img#submit_area_button{src: :"/images/comment/bt_submit.png"}
