--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,18 +1,4 @@
-%header.retty-header
-  .retty-header__container
-    .retty-header__logo
-      %h1
-        %span Retty
-    .retty-header__menu
-      %ul
-        %li Retty(レッティ)とは
-        %li サイトマップ
-        %li まとめ
-        %li 食材
-        %li 飲み物
-        %li キーワード
-        %li 取材お申し込み
-        %li アカウントをお持ちのかたは
+= render 'header'
   .top-header
     .top-header__container
       .top-header__lead-main
