--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -5,6 +5,7 @@
       %h2 Create Account
       %h5 新規アカウントの作成
       = render "devise/shared/links"
+      =link_to "レストランの登録はこちら", new_restaurant_registration_path
     .account-page__inner--right.user-form
       = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
         = devise_error_messages!
