地図の作成

--- a/app/views/restaurants/show.html.haml
+++ b/app/views/restaurants/show.html.haml
@@ -67,4 +67,5 @@
               タブDです
           #tab_e.tab-pane{role: :"tabpanel"}
             %p
-              タブE!!
+              地図だよ
+            #map{:style => "width:640px; height:500px"}
