--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -21,7 +21,7 @@
       %ul#topmenu
         %li.nav_mypage マイページ
         %li.nav_wantto
-          = link_to "お店を検索", search_restaurants_path, 'data-turbolinks': false
+          = link_to "お店を検索", search_restaurants_path
         %li.nav_message メッセージ
         %li.nav_message イベント
         %li.nav_user 人を探す
