--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,11 +4,9 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title CopyRetty
     = csrf_meta_tags
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = include_gon
-    = javascript_include_tag "application"
+    = javascript_include_tag "application", 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag    "application", media: 'all', 'data-turbolinks-track': 'reload'
 
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
 
 
