--- a/app/views/restaurants/show.html.haml
+++ b/app/views/restaurants/show.html.haml
@@ -70,3 +70,5 @@
               地図だよ
             #map{:style => "width:640px; height:500px"}
 
+%input{name: "restaurant_address", type: "hidden", value: @restaurant.address, class: 'restaurant_address' }
+
