--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -16,6 +16,13 @@
             = f.text_field :name, autofocus: true
         .field
           .field-label
+            Image
+            = f.label :image do
+              .field-input
+                = f.file_field :image, style: "display:none;"
+                %img.fileinput-button{src: :"/images/comment/bt_photo.png"}
+        .field
+          .field-label
             = f.label :email
           .field-input
             = f.email_field :email
