画像がなかった時の処理を追加

--- a/app/views/users/_main-left.html.haml
+++ b/app/views/users/_main-left.html.haml
@@ -1,5 +1,5 @@
 #profile_area
-  %img#my_icon
+  %img#my_icon{src: "#{current_user.try(:image).url || "noimg_140_140.png"}"}
   %h1
     = current_user.name
   %ul#follow_data
