ビューを修正

--- a/app/views/introductions/_form.html.haml
+++ b/app/views/introductions/_form.html.haml
@@ -9,7 +9,7 @@
         = f.file_field :image, style: "display:none;"
         %img.fileinput-button{src: :"/images/comment/bt_photo.png"}
     #review_area
-      %span.label 内容
+      %span.label タイトル
       = f.text_field :title, placeholder: "(例)早い、安い、うまいの三拍子が揃う人気のうどん店"
 
     #review_area
