変更を追加

--- a/app/assets/stylesheets/modules/_restaurant-page.scss
+++ b/app/assets/stylesheets/modules/_restaurant-page.scss
@@ -204,3 +204,21 @@ color: #cd7401;
     border: 5px solid #f8f6f2;
     object-fit: cover;
 }
+
+#comment_icon{
+    width: 60px;
+    height: 60px;
+}
+
+.rating{
+    padding-bottom: 5px;
+    padding-left: 10px;
+}
+
+
+.relative {
+    position: relative;
+}
+.absolute {
+    position: absolute;
+}
