--- a/app/views/restaurants/registrations/new.html.haml
+++ b/app/views/restaurants/registrations/new.html.haml
@@ -16,6 +16,11 @@
             = f.text_field :name, placeholder: "(例)Retty本店"
         .field
           .field-label
+            = f.label :ふりがな
+          .field-input
+            = f.text_field :name, placeholder: "(例)レッティほんてん"
+        .field
+          .field-label
             = f.label :email
           .field-input
             = f.email_field :email
