--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -2,13 +2,14 @@
   .frame.frame-type-1
     .table-box.clearfix
       .table-box__sub.float-left
-        %img#my_icon{src: "#{current_user.try(:image).url || :"/images/noimg_140_140.png" }"}
-        - if comment.rate == 3
-          %img.rating{src: :"/images/comment/retty_love.png"}
-        - elsif comment.rate == 2
-          %img.rating{src: :"/images/comment/retty_smile.png"}
-        - else
-          %img.rating{src: :"/images/comment/retty_sad.png"}
+        .table-box__sub-with_score
+          %img#comment_icon{src: "#{current_user.try(:image).url || :"/images/noimg_140_140.png" }"}
+          - if comment.rate == 3
+            %img.rating{src: :"/images/comment/retty_love.png"}
+          - elsif comment.rate == 2
+            %img.rating{src: :"/images/comment/retty_smile.png"}
+          - else
+            %img.rating{src: :"/images/comment/retty_sad.png"}
       .table-box__main.float-left
         %p.color-orange.bold.font-md.mt5.mb5
           = comment.user.name
