--- a/app/views/restaurants/registrations/edit.html.haml
+++ b/app/views/restaurants/registrations/edit.html.haml
@@ -1,36 +1,71 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-    - if @minimum_password_length
-      %br/
-      %em
-        = @minimum_password_length
-        characters minimum
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "off"
-  .actions
-    = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+= render 'users/header'
+#account-page.account-page
+  .account-page__inner.clearfix
+    .account-page__inner--left.account-page__header
+      %h2 Edit
+      %h5 レストラン情報の編集
+      = link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'btn'
+      = link_to "トップページに戻る", :back, class: 'btn'
+    .account-page__inner--right.user-form
+      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        = devise_error_messages!
+        .field
+          .field-label
+            = f.label :店名
+          .field-input
+            = f.text_field :name, placeholder: "(例)Retty本店"
+        .field
+          .field-label
+            = f.label :ふりがな
+          .field-input
+            = f.text_field :name, placeholder: "(例)レッティほんてん"
+        .field
+          .field-label
+            = f.label :email
+          .field-input
+            = f.email_field :email
+
+        .field
+          .field-label
+            = f.label :電話番号
+          .field-input
+            = f.text_field :phonenumber, placeholder: "(例)03-1234-5678"
+
+        .field
+          .field-label
+            = f.label :ランチ予算
+          .field-input
+            = f.select :budget_lunch, [ ["営業時間外", 0], ["〜1000円", 1000], ["〜2000円", 2000], ["〜3000円", 3000], ["〜4000円", 4000], ["〜5000円", 5000], ["〜6000円", 6000], ["〜8000円", 8000], ["〜10000円", 10000], ["〜15000円", 15000], ["〜20000円", 20000], ["〜30000円", 30000], ["〜60000円", 60000]]
+
+
+        .field
+          .field-label
+            = f.label :ディナー予算
+          .field-input
+            = f.select :budget_dinner, [["営業時間外", 0], ["〜1000円", 1000], ["〜2000円", 2000], ["〜3000円", 3000], ["〜4000円", 4000], ["〜5000円", 5000], ["〜6000円", 6000], ["〜8000円", 8000], ["〜10000円", 10000], ["〜15000円", 15000], ["〜20000円", 20000], ["〜30000円", 30000], ["〜60000円", 60000]]
+
+        .field
+          .field-label
+            = f.label :国名
+          .field-input
+            = f.select :country, [["-----", "NULL"], ["日本", "日本"], ["中国", "中国"], ["韓国", "韓国"], ["タイ", "タイ"], ["シンガポール", "シンガポール"], ["アメリカ", "アメリカ"], ["カナダ", "カナダ"], ["オーストラリア", "オーストラリア"], ["イギリス", "イギリス"], ["フランス", "フランス"], ["イタリア", "イタリア"], ["ドバイ", "ドバイ"]]
+
+        .field
+          .field-label
+            = f.label :住所
+          .field-input
+            = f.text_field :address, placeholder: "(例)東京都中央区入船2-1-1"
+
+        .field
+          .field-label
+            = f.label :password
+            %i (英数字8文字以上)
+          .field-input
+            = f.password_field :password, autocomplete: "off"
+        .field
+          .field-label
+            = f.label :password_confirmation
+          .field-input
+            = f.password_field :password_confirmation, autocomplete: "off"
+        .actions
+          = f.submit "Edit Account", class: 'btn'
