--- a/app/views/restaurants/show.html.haml
+++ b/app/views/restaurants/show.html.haml
@@ -19,9 +19,14 @@
               =link_to edit_restaurant_registration_path(@restaurant) do
                 %p.btn.btn-type-2
                   %span 登録情報を編集する
+            - if @restaurant.introduction.blank?
               =link_to new_restaurant_introduction_path(@restaurant) do
                 %p.btn.btn-type-2
                   %span 紹介文を投稿する
+            - else
+              =link_to new_restaurant_introduction_path(@restaurant) do
+                %p.btn.btn-type-2
+                  %span 紹介文を編集する
             .table-box__add
               %p.overview__tel
                 = @restaurant.try(:phonenumber)
