--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -17,5 +17,4 @@
       = f.radio_button :rate, 1, {id: "bt_score_3"}
     #submit_area
       = f.label :commit do
-        = f.submit "Send"
-        %img#submit_area_button{src: :"/images/comment/bt_submit.png"}
+        = f.submit " ", id: "submit_area_button"
