--- a/app/views/introductions/new.html.haml
+++ b/app/views/introductions/new.html.haml
@@ -8,16 +8,13 @@
           %li
         #profile_area
           %img#my_icon
-          %h1 shinji iida
+          %h1
+            = @restaurant.name
           %ul#follow_data
             %li
-              フォロー：
               %span
-                1
             %li
-              フォロワー：
               %span
-                2
           %p#profile_comment
             %a#sidebar_write_profile_button
           %ul#user_data
