--- a/app/views/introductions/new.html.haml
+++ b/app/views/introductions/new.html.haml
@@ -38,27 +38,7 @@
           #retty_ranking
             %a
             %img{src: :"/images/bt_ranking.png" }
-        #contents_area
-          %h1 紹介文を投稿
-          = form_for [@restaurant,@introduction] do |f|
-            #restaurant_area_upload
-              %span.label 店名
-              %span#restaurant_name
-                = @restaurant.name
-              = f.label :image do
-                = f.file_field :image, style: "display:none;"
-                %img.fileinput-button{src: :"/images/comment/bt_photo.png"}
-            #review_area
-              %span.label タイトル
-              = f.text_area :title, placeholder: "(例)早い、安い、うまいの三拍子が揃う人気のうどん店"
-
-            #review_area
-              %span.label 内容
-              = f.text_area :body, placeholder: "(例)渋谷駅より徒歩5分のうどんチェーン店「丸亀製麺 渋谷道玄坂店」。便利な場所でリーズナブルに食事がとれる人気店。提供するのは讃岐うどんなので、麺は太くコシがあり、もちもちとした食感。つゆも出汁が効いていて美味しい。"
-
-    #submit_area
-      = f.label :commit do
-        = f.submit " ", id: "submit_area_button"
+        = render 'form'
 
     %p.go_top
       %a{:href => "javascript:void(0);", :onclick => "scrollToHead();"}
