--- a/app/views/comments/edit.html.haml
+++ b/app/views/comments/edit.html.haml
@@ -11,6 +11,6 @@
 
     %p.go_top
       %a{:href => "javascript:void(0);", :onclick => "scrollToHead();"}
-        %strong ▲ ページトップへ戻る
+        %strong ▲ ページトップへ
 
 .footer
