--- a/app/assets/stylesheets/modules/_top-page.scss
+++ b/app/assets/stylesheets/modules/_top-page.scss
@@ -24,7 +24,7 @@
         overflow-wrap: normal;
         white-space: nowrap;
         display: block;
-        background: url(app/assets/images/index/logo.png) no-repeat 0 0;
+        background: url(/images/index/logo.png) no-repeat 0 0;
         background-size: 108px 39px;
         }
     }
