--- a/app/assets/stylesheets/modules/_top-page.scss
+++ b/app/assets/stylesheets/modules/_top-page.scss
@@ -51,7 +51,7 @@
 
 
 .top-header{
-  background-image: url(/images/index/main_pic_01.jpeg);
+  background-image: image-url("index/main_pic_01.jpeg");
   width: 100%;
   height: 418px;
   background-repeat: no-repeat;
