--- a/app/assets/stylesheets/modules/_top-page.scss
+++ b/app/assets/stylesheets/modules/_top-page.scss
@@ -24,7 +24,7 @@
         overflow-wrap: normal;
         white-space: nowrap;
         display: block;
-        background: url(/images/index/logo.png) no-repeat 0 0;
+        background-image: image-url("index/logo.png");
         background-size: 108px 39px;
         }
     }
@@ -77,7 +77,7 @@
             height: 34px;
             display: block;
             margin: 0 auto;
-            background: url(/images/index/top_title.png) no-repeat 0 0;
+            background-image: image-url("index/top_title.png");
             background-size: 580px 34px;
             text-indent: 100%;
             white-space: nowrap;
@@ -134,7 +134,7 @@
 
 
 .top-middle{
-    background-image: url(/images/index/index_top_user_banner.jpg);
+    background-image: image-url("index/index_top_user_banner.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
