--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,7 +2,7 @@
   .header_area
     %p.tagline 実名口コミNo.1 / お店探しはグルメなあの人から
     #logo
-      %img{src: :"/images/header/logo.png"}
+      %img{ :src => asset_path("/images/header/logo.png") }
     %ul#header_link
       %li.about_retty Retty(レッティー)とは
       %li.about_retty エリア
