--- a/app/views/introductions/new.html.haml
+++ b/app/views/introductions/new.html.haml
@@ -20,24 +20,24 @@
           %ul#user_data
             %li
               %a
-              %img{src: :"/images/ic_itta.png" }
+              %img{ :src => asset_path("/images/ic_itta.png") }
                 行ったお店：
               %span 0
             %li
               %a
-              %img{src: :"/images/ic_ikitai.png" }
+              %img{ :src => asset_path("/images/ic_ikitai.png") }
                 行きたいお店：
               %span 0
           #mymenu
             %a
-            %img{src: :"/images/bt_itta_ikitai.png" }
+            %img{ :src => asset_path("/images/bt_itta_ikitai.png") }
             %a
-            %img{src: :"/images/bt_edit.png" }
+            %img{ :src => asset_path("/images/bt_edit.png") }
             %a
-            %img{src: :"/images/bt_draft.png" }
+            %img{ :src => asset_path("/images/bt_draft.png") }
           #retty_ranking
             %a
-            %img{src: :"/images/bt_ranking.png" }
+            %img{ :src => asset_path("images/bt_ranking.png") }
         = render 'form'
 
     %p.go_top
