--- a/app/views/users/_aside.html.haml
+++ b/app/views/users/_aside.html.haml
@@ -1,13 +1,13 @@
 #aside
   #iine_ranking
     %h2.bold
-      %img{src: :"/images/ic_iine_ranking.png" }
+      %img{ :src => asset_path("/images/ic_iine_ranking.png") }
         いいねをもらった数
     %ul
       %li いいねをもらっていません
   #ikitai_ranking
     %h2.bold
-      %img{src: :"/images/ic_ikitai_ranking.png" }
+      %img{ :src => asset_path("/images/ic_ikitai_ranking.png") }
         いいねをもらった数
     %ul
       %li 行きたいをもらっていません
