--- a/app/assets/stylesheets/modules/_mypage-left.scss
+++ b/app/assets/stylesheets/modules/_mypage-left.scss
@@ -26,7 +26,8 @@ h1 {
     width: 291px;
     padding: 20px 41px 20px 20px;
     margin-top: 4px;
-    background: url(/images/bg_profile.png) repeat-y;
+    background-image: image-url("/images/bg_profile.png");
+    background-repeat: repeat-y;
     background-position: 270px;
 
     h1 {
@@ -54,21 +55,22 @@ h1 {
     position: absolute;
     top: 0;
     left: 270px;
-    content: url(/images/bg_profile_top.png);
+    content: image-url("/images/bg_profile_top.png");
     }
     &:after {
     display: block;
     position: absolute;
     bottom: -5px;
     left: 270px;
-    content: url(/images/bg_profile_bottom.png);
+    content: image-url("/images/bg_profile_bottom.png");
     }
 }
 
 #profile_comment {
     margin-bottom: 15px;
     padding: 20px 0 25px;
-    background: url(/images/bg_profile_comment.png) no-repeat;
+    background-image: image-url("/images/bg_profile_comment.png");
+    background-repeat: no-repeat;
     background-position: bottom;
     clear: both;
 }
@@ -77,7 +79,10 @@ h1 {
 
 #sidebar_write_profile_button {
     display: block;
-    background: transparent url(/images/side_link_account.png) no-repeat 0 0;
+    background-image: image-url("/images/side_link_account.png");
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: 0 0;
     background-size: 100% 200%;
     height: 49px;
 }
