--- a/app/assets/stylesheets/modules/_form.scss
+++ b/app/assets/stylesheets/modules/_form.scss
@@ -19,7 +19,7 @@ h1 {
       height: 44px;
       margin: 0 auto;
       margin-left: 20px;
-      background-image: image-url("/images/comment/bt_submit.png");
+      background-image: image-url("/comment/bt_submit.png");
       }
 }
 
@@ -72,7 +72,7 @@ input[type="radio"]#bt_score_1 {
     display: inline-block;
     width: 61px;
     height: 43px;
-    background-image: image-url("/images/comment/bt_score_1_off.png");
+    background-image: image-url("/comment/bt_score_1_off.png");
     background-size: contain;
 
 }
@@ -82,7 +82,7 @@ input[type="radio"]#bt_score_1:checked:before{
     display: inline-block;
     width: 61px;
     height: 43px;
-    background-image: image-url("/images/comment/bt_score_1_on.png");
+    background-image: image-url("/comment/bt_score_1_on.png");
     background-size: contain;
 
 }
@@ -93,7 +93,7 @@ input[type="radio"]#bt_score_2 {
     display: inline-block;
     width: 61px;
     height: 43px;
-    background-image: imaeg-url("/images/comment/bt_score_2_off.png");
+    background-image: imaeg-url("/comment/bt_score_2_off.png");
     background-size: contain;
 
 }
@@ -103,7 +103,7 @@ input[type="radio"]#bt_score_2:checked:before{
     display: inline-block;
     width: 61px;
     height: 43px;
-    background-image: image-url("/images/comment/bt_score_2_on.png");
+    background-image: image-url("/comment/bt_score_2_on.png");
     background-size: contain;
 
 }
@@ -114,7 +114,7 @@ input[type="radio"]#bt_score_3 {
     display: inline-block;
     width: 61px;
     height: 43px;
-    background-image: image-url("/images/comment/bt_score_3_off.png");
+    background-image: image-url("/comment/bt_score_3_off.png");
     background-size: contain;
 
 }
@@ -124,7 +124,7 @@ input[type="radio"]#bt_score_3:checked:before{
     display: inline-block;
     width: 61px;
     height: 43px;
-    background-image: image-url("/images/comment/bt_score_3_on.png");
+    background-image: image-url("/comment/bt_score_3_on.png");
     background-size: contain;
 
 }
