--- a/app/views/users/_main-left.html.haml
+++ b/app/views/users/_main-left.html.haml
@@ -1,5 +1,5 @@
 #profile_area
-  %img#my_icon{src: "#{current_user.try(:image).url || :"/images/noimg_140_140.png" }"}
+  = image_tag "#{current_user.try(:image).url || "/assets/noimg_140_140.png" }", id: "my_icon"
   %h1
     = current_user.name
   %ul#follow_data
@@ -17,21 +17,21 @@
   %ul#user_data
     %li
       %a
-      %img{ :src => asset_path("/images/ic_itta.png") }
-        行ったお店：
+      = image_tag "ic_itta.png"
+      行ったお店：
       %span 0
     %li
       %a
-      %img{ :src => asset_path("/images/ic_ikitai.png") }
-        行きたいお店：
+      = image_tag "ic_ikitai.png"
+      行きたいお店：
       %span 0
   #mymenu
     %a
-    %img{ :src => asset_path("/images/bt_itta_ikitai.png") }
+    = image_tag "bt_itta_ikitai.png"
     %a
-    %img{ :src => asset_path("/images/bt_edit.png") }
+    = image_tag "bt_edit.png"
     %a
-    %img{ :src => asset_path("/images/bt_draft.png") }
+    = image_tag "bt_draft.png"
   #retty_ranking
     %a
-    %img{ :src => asset_path("/images/bt_ranking.png") }
+    = image_tag "bt_ranking.png"
