画像のパスを修正

--- a/app/views/users/_aside.html.haml
+++ b/app/views/users/_aside.html.haml
@@ -7,7 +7,7 @@
       %li いいねをもらっていません
   #ikitai_ranking
     %h2.bold
-      = image_tag "/images/ic_ikitai_ranking.png"
+      = image_tag "ic_ikitai_ranking.png"
       いいねをもらった数
     %ul
       %li 行きたいをもらっていません
