--- a/app/views/restaurants/registrations/edit.html.haml
+++ b/app/views/restaurants/registrations/edit.html.haml
@@ -67,5 +67,11 @@
             = f.label :password_confirmation
           .field-input
             = f.password_field :password_confirmation, autocomplete: "off"
+        .field
+          .field-label
+            = f.label :current_password
+            %i (変更には現在のパスワードの入力が必要です)
+          .field-input
+            = f.password_field :current_password, autocomplete: "off"
         .actions
           = f.submit "Edit Account", class: 'btn'
