画像のパスの指定を変更

--- a/app/views/restaurants/show.html.haml
+++ b/app/views/restaurants/show.html.haml
@@ -44,7 +44,7 @@
       .nav_bar
         %ul.tab
           %li.restaurant_top
-            = image_tag "restaurant/home.png"
+            %img{ :src => asset_path("assets/restaurant/home.png") }
             店舗トップ
           %li.comment_list
             = image_tag "restaurant/comment.png"
