画像のパス指定を修正

--- a/app/assets/stylesheets/modules/_form.scss
+++ b/app/assets/stylesheets/modules/_form.scss
@@ -93,7 +93,7 @@ input[type="radio"]#bt_score_2 {
     display: inline-block;
     width: 61px;
     height: 43px;
-    background-image: imaeg-url("comment/bt_score_2_off.png");
+    background-image: image-url("comment/bt_score_2_off.png");
     background-size: contain;
 
 }
