カレンダーのviewを修正

--- a/app/assets/stylesheets/modules/_mypage-center.scss
+++ b/app/assets/stylesheets/modules/_mypage-center.scss
@@ -54,7 +54,7 @@
     min-height: 110px;
 }
 
-#iine_ranking h2, #ikitai_ranking h2, #gone_notice h2, #latest_comments h2, #retty_ranking h2, #latest_posts h2 ,#new_follower h2{
+#iine_ranking h2, #ikitai_ranking h2, #gone_notice h2, #latest_comments h2, #retty_ranking h2, #latest_posts h2 ,#new_follower h2, #ikitai_calendar h2{
     position: relative;
     padding: 10px 10px 10px 34px;
     border-bottom: 1px solid #dfd9cc;
