--- a/app/views/users/_main-right.html.haml
+++ b/app/views/users/_main-right.html.haml
@@ -30,4 +30,7 @@
       新しいフォロワー
     %ul
       %li 最近のフォロワーがいません
-  #calendar
+  #ikitai_calendar
+    %h2
+      = current_user.name + "さんの行きたいカレンダー"
+    #calendar
